tests/examples/good/garbage_collector/good007.lat
int main() {
    string s = "hi";
    s = s + s;
    s = s + s;
    s = s + s + s + s;
    return 0;
}

