tests/examples/bad/invalid_arithmetic_negation.lat
int main() {
    string s;
    -s;
    return 1;
}